# copas

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
.github/workflows/: release.yml
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_watcher.rs  commands.rs  lib.rs  license.rs  models.rs  paste.rs  storage.rs
