[package]
name = "copas"
version = "2.1.0"
description = "CoPas - Clipboard Manager for Windows & macOS"
authors = ["CoPas Team"]
license = "MIT"
repository = "https://github.com/Hoanq1003/copas"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3", features = ["image-data"] }
enigo = { version = "0.2" }
sha2 = "0.10"
image = "0.25"
tokio = { version = "1", features = ["time", "sync"] }
dirs = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
